[tool.poetry]
name = "obplatform"
version = "0.1.2"
description = "APIs to access ASHRAE OB Database"
authors = ["Wei Mu <wmu100@syr.edu>"]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
requests = "^2.26.0"
tqdm = "^4.62.3"
pandas = {version = "^1.3.4", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^21.10b0"
isort = "^5.10.1"
mypy = "^0.910"
Sphinx = "^4.3.0"
sphinx-rtd-theme = "^1.0.0"
types-requests = "^2.26.0"
responses = "^0.16.0"
pytest-cov = "^3.0.0"
tox = "^3.24.4"
pytest-mock = "^3.6.1"
darglint = "^1.8.1"
tbump = "^6.6.0"
sphinx-autodoc-typehints = "^1.12.0"
sphinxcontrib-napoleon = "^0.7"
rstcheck = "^3.3.1"

[tool.poetry.extras]
pandas = ["pandas"]

[tool.poetry.urls]
homepage = "https://ashraeobdatabase.com"
repository = "https://github.com/umonaca/obplatform"
"Bug Tracker" = "https://github.com/umonaca/obplatform/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
